尝试修复无法显示标题

--- a/_posts/1.md
+++ b/_posts/1.md
@@ -3,7 +3,7 @@ layout:     post
 title:      [原创]更多米神模组
 subtitle:   [原创]更多米神模组
 date:       2021-6-7
-author:     VeltGop开发者之家
+author:     VeltGop-开发者之家
 header-img: img/post-web.jpg
 catalog: true
 tags:
