--- a/_posts/2021-6-7-[原创]更多米神模组.md
+++ b/_posts/2021-6-7-[原创]更多米神模组.md
@@ -7,8 +7,7 @@ author:     VeltGop开发者之家
 header-img: img/post-web.jpg
 catalog: true
 tags:
-    - bbs
-    - VeltGop
+    - moremikumaster
 ---
 
 # [原创]更多米神模组
