--- a/_posts/2021-6-7-更多米神模组.md
+++ b/_posts/2021-6-7-更多米神模组.md
@@ -1,8 +1,8 @@
 ---
 layout:     post
-title:      [原创]更多米神模组
-subtitle:   [原创]更多米神模组
-date:       2021-6-7
+title:      更多米神模组
+subtitle:   更多米神模组
+date:       2021-6-22
 author:     VeltGop开发者之家
 header-img: img/post-web.jpg
 catalog: true
